istio-manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: juicebox-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  - name: https
    hostname: "*.juicebox.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: juicebox-tls-secret
    allowedRoutes:
      namespaces:
        from: All  
  - name: http
    hostname: "*.juicebox.com" 
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
